# pdfium-qmake

./: .gclient  .gitattributes  .gitmodules  MainScreen.qml  README.md  SketchArea.qml  bigint.pri  config.pri  digitizer.cpp  digitizer.h  drawingarea.cpp  drawingarea.h  fdrm.pri  formfiller.pri  fpdftext.pri  fx_libopenjpeg.pri  fxcodec.pri  fxedit.pri  fxge.pri  main.cpp  main.qml  make.py  pdfium.pri  pdfium.pro  pdfium_base.pri  pdfwindow.pri  qml.qrc  qpm.json  xochitl.pro
androidprecompiled/: args.gn
app/: ArchiveBook.qml  ArchiveButton.qml  ArchiveMain.qml  ArchiveTab.qml  ArchiveView.qml  BookOverview.qml  BookThumbnail.qml  ColorButton.qml  Dialog.qml  DocumentPositionBar.qml  DocumentTab.qml  EditActions.qml  MainScreen.qml  MainScreenHeader.qml  MainScreenPreviews.qml  NoteArea.qml  NoteTab.qml  SketchArea.qml  SketchTab.qml  TabBar.qml  ThumbnailGrid.qml  ToolBox.qml  ToolButton.qml  app.pro  batterymonitor.cpp  batterymonitor.h  collection.cpp  collection.h  debug.h  digitizer.cpp  digitizer.h  document.cpp  document.h  documentworker.cpp  documentworker.h  drawingarea.cpp  drawingarea.h  imagedocument.cpp  imagedocument.h  line.cpp  (+24 more)
iosprecompiled/: args.gn  ios.patch
macosxprecompiled/: args.gn
macosxprecompiled/Pdfium.framework/: Pdfium
macosxprecompiled/Pdfium.framework/Versions/1/Resources/: Info.plist
pdfium/: fpdfapi.pri  fpdfdoc.pri  fx_agg.pri  fx_freetype.pri  fx_lcms2.pri  fx_zlib.pri  fxcrt.pri  javascript.pri  libjpeg.pri
prebuilt-headers-linux/: fpdfview.h
qsgepaper/: epcontext.cpp  epcontext.h  epframebuffer.cpp  epframebuffer.h  eprenderer.cpp  eprenderer.h  eprenderloop.cpp  eprenderloop.h  eptexture.cpp  eptexture.h  qsgepaper.json  qsgepaper.pro  (+2 more)
win32precompiled/: args.gn  patch.diff  pdfium.dll.exp  pdfium.dll.lib  pdfium.lib
(+10 files in other folders)
