# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
is_debug=false
symbol_level=0
is_component_build=false
pdf_is_complete_lib=true
pdf_enable_v8=false
pdf_enable_xfa=false
pdf_use_skia=false
pdf_use_skia_paths=false
pdf_is_standalone=true
use_goma=false
enable_stripping=true
mac_deployment_target="10.9.0"
